lambdacube-dsl/tests/accept/framebuffer04.lc
main =
    let frame = FrameBuffer (depthImage1 1.0)
    in ScreenOut frame
