lambdacube-dsl/tests/reject/framebuffer03.lc
main =
    let frame = FrameBuffer (colorImage1 (V4F 0.0 0.0 0.4 1.0)
                            ,depthImage1 1.0
                            ,depthImage1 1.0
                            )
    in ScreenOut frame
